--- a/package.json
+++ b/package.json
@@ -14,21 +14,34 @@
     "react-native": "0.64.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@types/jest": "^27.0.1",
-    "@types/react": "^17.0.20",
-    "@types/react-native": "^0.64.13",
-    "@types/react-test-renderer": "^17.0.1",
-    "babel-jest": "^26.6.3",
+    "@babel/core": "7.12.9",
+    "@babel/runtime": "7.12.5",
+    "@react-native-community/eslint-config": "2.0.0",
+    "@types/jest": "27.0.1",
+    "@types/react": "17.0.20",
+    "@types/react-native": "0.64.13",
+    "@types/react-test-renderer": "17.0.1",
+    "babel-jest": "26.6.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "7.14.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.64.0",
+    "fetch-mock": "7.3.3",
+    "jest": "26.6.3",
+    "jest-environment-enzyme": "^7.0.2",
+    "jest-enzyme": "^7.0.2",
+    "metro-react-native-babel-preset": "0.64.0",
+    "react-dom": "^16.8.6",
     "react-test-renderer": "17.0.1",
-    "typescript": "^4.4.2"
+    "typescript": "4.4.2"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "setupFilesAfterEnv": [
+      "jest-enzyme"
+    ],
+    "testEnvironment": "enzyme",
+    "testEnvironmentOptions": {
+      "enzymeAdapter": "react16"
+    }
   }
 }
